[project]
name = "super-memory"
version = "0.2.0"
description = "N:M Associative Memory System for LLM Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "numpy",
    "python-dotenv>=1.2.2",
]

[project.scripts]
super-memory = "super_memory:main"
