[project]
name = "mcp-super-memory"
version = "0.2.1"
description = "N:M Associative Memory System for LLM Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Donggyun Seo", email = "donggyun112@gmail.com" },
]
keywords = ["mcp", "memory", "llm", "associative-memory", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "numpy",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/donggyun112/super-memory"
Repository = "https://github.com/donggyun112/super-memory"

[project.scripts]
mcp-super-memory = "super_memory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["super_memory"]
